--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ p {
 }
 
 .menu {
-    position: fixed;
+    position: absolute;
     top: 30%;
     width: 100%;
     background-color: var(--color-black);
